Object out of focus when .blend saved in sculpt mode #33510

Closed
opened 2012-12-13 08:49:11 +01:00 by riidom · 4 comments

%%%WinXP r52860
"rotation around selection" activated (not sure if this plays a role)

Steps to reproduce:

  • Add a cube, move it away from world 0,0,0
  • Go in Sculpt mode, save the blend file
  • Close&reopen blender, load the file (closing blender required here)
  • Rotating the view will not have the cube in focus
  • Pressing Num-Dot or going in edit mode and pressing Num-Dot will not fix that
  • Only (afaik) way to fix is go in Object mode and back to Sculpt mode

Would be more convenient for sculpting sessions, if the focus gets remembered in sculptmode too.
%%%

%%%WinXP r52860 "rotation around selection" activated (not sure if this plays a role) Steps to reproduce: - Add a cube, move it away from world 0,0,0 - Go in Sculpt mode, save the blend file - Close&reopen blender, load the file (closing blender required here) - Rotating the view will not have the cube in focus - Pressing Num-Dot or going in edit mode and pressing Num-Dot will not fix that - Only (afaik) way to fix is go in Object mode and back to Sculpt mode Would be more convenient for sculpting sessions, if the focus gets remembered in sculptmode too. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%As i understand Rotate Around Selection doesn't work when you're opening file with object in sculpt mode. Checking the code..%%%

%%%As i understand Rotate Around Selection doesn't work when you're opening file with object in sculpt mode. Checking the code..%%%

%%%Fixed in svn rev52966. Thanks for the report, closing.%%%

%%%Fixed in svn rev52966. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33510
No description provided.